fix(LinkedListUtil.java): update methods to remove elements from LinkedList to use more specific removeFirst and removeLast methods for clarity and correctness